vendor/proc-macro-error-1.0.4/tests/ui/dummy.stderr
error: set_dummy test
 --> $DIR/dummy.rs:9:8
  |
9 | dummy!(need_default);
  |        ^^^^^^^^^^^^
