vendor/proc-macro-error-1.0.4/tests/ui/dummy.rs
extern crate test_crate;
use test_crate::*;

enum NeedDefault {
    A,
    B
}

dummy!(need_default);

fn main() {
    let _ = NeedDefault::default();
}
